<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/settings_hotstring_sort_title"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_insertion"
                    android:title="@string/settings_hotstring_sort_insertion" />
                <item
                    android:id="@+id/menu_sort_trigger_asc"
                    android:title="@string/settings_hotstring_sort_trigger_asc" />
                <item
                    android:id="@+id/menu_sort_trigger_desc"
                    android:title="@string/settings_hotstring_sort_trigger_desc" />
                <item
                    android:id="@+id/menu_sort_expansion_asc"
                    android:title="@string/settings_hotstring_sort_expansion_asc" />
                <item
                    android:id="@+id/menu_sort_expansion_desc"
                    android:title="@string/settings_hotstring_sort_expansion_desc" />
            </group>
        </menu>
    </item>

</menu>
